fix: system message z-index

--- a/client/src/pages/desktop/components/message/index.module.less
+++ b/client/src/pages/desktop/components/message/index.module.less
@@ -10,6 +10,7 @@
   overflow: auto;
   padding: 10px;
   padding-bottom: 50px;
+  z-index: 99999;
 }
 
 .message {
